udpate travis build scripts,

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ jobs:
       install:
         - curl -sL https://firebase.tools | bash
       script:
-        - yarn
-        - yarn build
+        - npm install
+        - npm run build
         - firebase deploy --non-interactive --token $FIREBASE_TOKEN
 
     - stage: Merge
